web/css/modal.css
.modal-box {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  padding: 1em;
  width: 70%;
  background-color: #fff;
  transform: translate(-50%, -50%);
  outline: transparent;
  overflow: hidden;
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, .4);
  overflow: scroll;
}

.close-modal {
  position: absolute;
  right: 0;
  top: 0;
  box-shadow: none;
  border-color: transparent;
  color: black;
  background-color: var(--main-bg-color);
}

.close-modal:not(disabled):hover {
  background-color: var(--main-bg-color);
  color: black;
}

.no-show {
  display: none;
}

.inverse {
  padding: 0.2rem;
  margin: 0.5rem;
}

